--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,16 @@
 html {
     background-color: rgb(184, 183, 183);
   }
+  * {
+    padding: 0;
+    margin: 0;
+  }
+  
+  body {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    min-height: 70vh;
+    line-height: 30px;  }
