Dynamic pages at run time

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -2,10 +2,10 @@
 
     background-color: rgb(247, 238, 238);
     font-style: bold;
-    color: black;
     font-size: 26px;
     align-items: center;
     display: flex;
+    padding: 10px;
     justify-content: space-around;
     flex-direction: row;
     height: 18vh;
