Used Material UI

--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -6,7 +6,6 @@
     align-items: center;
     display: flex;
     padding: 10px;
-    justify-content: space-around;
+    justify-content: space-between;
     flex-direction: row;
-    height: 18vh;
 }
