--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,16 +1,16 @@
 html {
-    background-color: rgb(184, 183, 183);
+    background-color: rgb(255, 255, 255);
   }
   * {
-    padding: 0;
-    margin: 0;
+    padding: auto;
+    margin: auto;
   }
   
   body {
-    display: flex;
+    display: flexbox;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: relative;
-    min-height: 70vh;
+    text-align: center;
+    line-height: 30px;
   }
