--- a/src/components/layout.module.css
+++ b/src/components/layout.module.css
@@ -15,6 +15,12 @@ background-color: rgb(223, 142, 192);
 
 
 }
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;            /* Footer height */
+  }
 .item{
     padding: 10px;
     text-decoration: none;
